--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 <body class="bg-gray-100 text-center">
 <h1 class="text-3xl font-bold text-blue-500">Bienvenue sur mon site</h1>
 </body>
+<footer class="mt-10 text-gray-600">&#169; 2025 Mon Site</footer>
 </html>
