--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body class="bg-gray-100 text-center">
 <h1 class="text-3xl font-bold text-blue-500">
-<button class="mt-5 px-4 py-2 bg-blue-500 text-white rounded">
-Cliquez-moi
-</button>
-Bienvenue sur mon site</h1>
-</body>
+  Bienvenue sur mon super site
+</h1></body>
 <footer class="mt-10 text-gray-600">&#169; 2025 Mon Site</footer>
 </html>
