--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-center">
-<h1 class="text-3xl font-bold text-blue-500">
-  Bienvenue sur mon super site
-</h1></body>
+<h1 class="text-3xl font-extrabold text-blue-500 animate-pulse">
+  Bienvenue sur mon site
+</h1>
+
+</body>
 <footer class="mt-10 text-gray-600">&#169; 2025 Mon Site</footer>
 </html>
