--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <h1 class="text-3xl font-extrabold text-blue-500 animate-pulse">
   Bienvenue sur mon site
 </h1>
+<form class="mt-5">
+  <input type="text" placeholder="Votre nom" class="border p-2 rounded">
+  <button class="ml-2 px-4 py-2 bg-blue-500 text-white rounded">
+    Envoyer
+  </button>
+</form>
 
 </body>
 <footer class="mt-10 text-gray-600">&#169; 2025 Mon Site</footer>
