--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-center">
-<h1 class="text-3xl font-extrabold text-blue-500 animate-pulse">
+<aside class="fixed top-0 left-0 w-64 h-full bg-blue-400 text-gray-100">
+<div class="flex flex-col h-full">
+<div class="p-4 bg-blue-500">
+Mon Site
+</div>
+<nav class="mt-10 flex-grow">
+<ul>
+<li class="py-2 px-4 hover:bg-gray-700 cursor-pointer">Accueil</li>
+<li class="py-2 px-4 hover:bg-gray-700 cursor-pointer">Services</li>
+<li class="py-2 px-4 hover:bg-gray-700 cursor-pointer">Contacts</li>
+</ul>
+</nav>
+<div class="mb-2 text-gray-600">&#169; 2025 Mon Site</div>
+</div>
+</aside><h1 class="text-3xl font-extrabold text-blue-500 animate-pulse">
   Bienvenue sur mon site
 </h1>
+<form class="mt-5">
+  <input type="text" placeholder="Votre nom" class="border p-2 rounded">
+  <button class="ml-2 px-4 py-2 bg-blue-500 text-white rounded">
+    Envoyer
+  </button>
+</form>
 
 </body>
 <footer class="mt-10 text-gray-600">&#169; 2025 Mon Site</footer>
